# mathset

./: README.md  pyproject.toml  setup.py
docs/: index.html
docs/css/: style.css
docs/js/: script.js
mathset/: __init__.py
src/mathset/: mathset.py
